@@ -1,83 +1,0 @@
-.\"  Copyright (c) 2007-2017, The CHICKEN Team
-.\"  All rights reserved.
-.\"
-.\"  Redistribution and use in source and binary forms, with or without
-.\"  modification, are permitted provided that the following conditions
-.\"  are met:
-.\"  1. Redistributions of source code must retain the above copyright
-.\"     notice, this list of conditions and the following disclaimer.
-.\"  2. Redistributions in binary form must reproduce the above copyright
-.\"     notice, this list of conditions and the following disclaimer in the
-.\"     documentation and/or other materials provided with the distribution.
-.\"  3. The name of the authors may not be used to endorse or promote products
-.\"     derived from this software without specific prior written permission.
-.\"
-.\"  THIS SOFTWARE IS PROVIDED BY THE AUTHORS ``AS IS'' AND ANY EXPRESS OR
-.\"  IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
-.\"  OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
-.\"  IN NO EVENT SHALL THE AUTHORS BE LIABLE FOR ANY DIRECT, INDIRECT,
-.\"  INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
-.\"  NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
-.\"  DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
-.\"  THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
-.\"  (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
-.\"  THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-.\"
-.\"
-.Dd Apr 26, 2017
-.Dt CHICKEN-BUG 1
-.Os
-.Sh NAME
-.Nm chicken-bug
-.Nd generate bug report from user input
-.Sh SYNOPSIS
-.Nm
-.Op Ar OPTION ...
-.Op Ar FILENAME
-.Sh DESCRIPTION
-.Nm
-generates a bug report file that collects user-input, optional
-files and system information obtained from the installed CHICKEN
-executables and libraries. Non-option arguments given on the command line
-are inserted into the bug report. If no option is given, or if
-.Sq \-
-has been passed on the command line, then a description of the problem
-is read from standard input, until EOF
-.Pq CTRL-D
-or a line consisting only
-of
-.Sq \&.
-.Pq period
-is read.
-.Pp
-The bug report will be written to a file in the current directory,
-which should be sent to CHICKEN maintainers as it contains various
-useful bits of information that make it easier to classify the
-problem described.
-.Pp
-Bug reports should be as detailed as possible. It is also very helpful
-to include code that reproduces the problem. The more detailed the input
-and the more thorough the description is, the easier you make it for
-the CHICKEN developers to help you.
-.Pp
-The program accepts following arguments:
-.Bl -tag -width Ds
-.It Fl h Ns , Fl help
-Show usage and exit.
-.It Fl to-stdout
-Write bug report to standard output.
-.It Fl
-Read description from standard input.
-.El
-.Sh EXIT STATUS
-.Ex -std
-.Sh SEE ALSO
-.Xr chicken 1
-.Pp
-More information can be found in the
-.Lk http://wiki.call-cc.org/manual/index "CHICKEN User's Manual".
-.Sh AUTHORS
-.An The CHICKEN Team
-.Sh BUGS
-Submit bug reports by e-mail to
-.Mt chicken-janitors@nongnu.org
