@@ -64,7 +64,6 @@ Build a C program from sources:
 .Dl $ chicken-do prg gcc prg.c -o prg \& : prg.c inc.h
 .Sh SEE ALSO
 .Xr chicken 1 ,
-.Xr chicken-bug 1 ,
 .Xr chicken-status 1 ,
 .Xr chicken-install 1 ,
 .Xr chicken-uninstall 1 ,
@@ -76,7 +75,4 @@ More information can be found in the
 .An The CHICKEN Team
 .Sh BUGS
 Submit bug reports by e-mail to
-.Mt chicken-janitors@nongnu.org ,
-preferably using the
-.Xr chicken-bug 1
-tool.
+.Mt chicken-janitors@nongnu.org
