@@ -138,7 +138,6 @@ Install an egg as an normal user but elevating privileges with different program
 .Dl $ SUDO=/usr/bin/doas chicken-install -s regex
 .Sh SEE ALSO
 .Xr chicken 1 ,
-.Xr chicken-bug 1 ,
 .Xr chicken-status 1 ,
 .Xr chicken-uninstall 1 ,
 .Xr csc 1
@@ -149,7 +148,4 @@ More information can be found in the
 .An The CHICKEN Team
 .Sh BUGS
 Submit bug reports by e-mail to
-.Mt chicken-janitors@nongnu.org ,
-preferably using the
-.Xr chicken-bug 1
-tool.
+.Mt chicken-janitors@nongnu.org
