@@ -75,7 +75,6 @@ entries.
 .Ex -std
 .Sh SEE ALSO
 .Xr chicken 1 ,
-.Xr chicken-bug 1 ,
 .Xr csc 1
 .Pp
 More information can be found in the
@@ -84,7 +83,4 @@ More information can be found in the
 .An The CHICKEN Team
 .Sh BUGS
 Submit bug reports by e-mail to
-.Mt chicken-janitors@nongnu.org ,
-preferably using the
-.Xr chicken-bug 1
-tool.
+.Mt chicken-janitors@nongnu.org
