@@ -83,7 +83,6 @@ flag in command. If not provided, defaults to
 .Ex -std
 .Sh SEE ALSO
 .Xr chicken 1 ,
-.Xr chicken-bug 1 ,
 .Xr chicken-install 1 ,
 .Xr chicken-status 1
 .Pp
@@ -93,7 +92,4 @@ More information can be found in the
 .An The CHICKEN Team
 .Sh BUGS
 Submit bug reports by e-mail to
-.Mt chicken-janitors@nongnu.org ,
-preferably using the
-.Xr chicken-bug 1
-tool.
+.Mt chicken-janitors@nongnu.org
