@@ -259,7 +259,6 @@ Holds a string of default compiler options that should apply to every invocation
 .Ex -std
 .Sh SEE ALSO
 .Xr chicken 1 ,
-.Xr chicken-bug 1 ,
 .Xr chicken-install 1 ,
 .Xr chicken-uninstall 1
 .Pp
@@ -269,7 +268,4 @@ More information can be found in the
 .An The CHICKEN Team
 .Sh BUGS
 Submit bug reports by e-mail to
-.Mt chicken-janitors@nongnu.org ,
-preferably using the
-.Xr chicken-bug 1
-tool.
+.Mt chicken-janitors@nongnu.org
