@@ -352,8 +352,7 @@ Can hold default options that should be passed to every invocation of
 .Sh EXIT STATUS
 .Ex -std
 .Sh SEE ALSO
-.Xr chicken 1 ,
-.Xr chicken-bug 1
+.Xr chicken 1
 .Pp
 More information can be found in the
 .Lk http://wiki.call-cc.org/manual/index "CHICKEN User's Manual".
@@ -361,7 +360,4 @@ More information can be found in the
 .An The CHICKEN Team
 .Sh BUGS
 Submit bug reports by e-mail to
-.Mt chicken-janitors@nongnu.org ,
-preferably using the
-.Xr chicken-bug 1
-tool.
+.Mt chicken-janitors@nongnu.org
