@@ -78,7 +78,6 @@ defaults to localhost:9999
 .Ex -std
 .Sh SEE ALSO
 .Xr chicken 1 ,
-.Xr chicken-bug 1 ,
 .Xr csc 1 ,
 .Xr csi 1
 .Pp
@@ -88,7 +87,4 @@ More information can be found in the
 .An The CHICKEN Team
 .Sh BUGS
 Submit bug reports by e-mail to
-.Mt chicken-janitors@nongnu.org ,
-preferably using the
-.Xr chicken-bug 1
-tool.
+.Mt chicken-janitors@nongnu.org
